Cleanup tests.